adding additional functionality

--- a/src/app/todo-item/todo-item.component.scss
+++ b/src/app/todo-item/todo-item.component.scss
@@ -3,6 +3,9 @@
     display: block; /* For Firefox */
   }
 
+[contenteditable]:focus {
+    outline: 0px solid transparent;
+}
  .done {
     text-decoration: line-through;
  } 
