--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -1,19 +1,17 @@
 <div class="ui two column padded grid">
-  <div class="one wide column" style="max-width: 2%">
-      <div class="ui radio checkbox">
-          <input type="checkbox" 
-          [value]="todo.done" 
-          [(ngModel)] = "todo.done"
-          (ngModelChange)="todo.done = $event">
-          <label></label>
-        </div>
+  <div class="one wide column" style="max-width: 3%">
+    <i class="circle outline large icon" *ngIf="!todo.done" 
+        (click)="(todo.text && todo.text.length > 0) && todo.done = !todo.done"></i>
+    <i class="check circle large green icon" *ngIf="todo.done" 
+      (click)="todo.done = !todo.done"></i>  
   </div>
   <div class="fifteen wide column">
     <div contenteditable="true" 
       [class.done] ="todo.done && todo.text && todo.text.length > 0"
        placeholder="Enter text here..."
-       [textContent]="todo.text" 
-      (input)="todo.text=$event.target.textContent">
+       [textContent]="todo.text"
+      (input)="todo.text=$event.target.textContent" 
+      (keyup.enter)="handleKeyUp($event)">
     </div>
   </div> 
 </div>
