--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -5,7 +5,7 @@
   <div class="column">
     <div class="ui celled list">
         <div class="item" *ngFor="let todo of todos">
-            <app-todo-item [todo]="todo"></app-todo-item>
+            <app-todo-item [todo]="todo" (onEnter)="handleEnter($event)"></app-todo-item>
         </div>  
     </div>
   </div>
