--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,18 +1,44 @@
-<div class="ui padded one column grid">
-  <div class="column">
-    <button type="button" class="ui primary button" (click)="add()">Add</button>  
-  </div>
-  <div class="column">
-    <div class="ui celled list">
-        <div class="item" *ngFor="let todo of todos">
-            <app-todo-item [todo]="todo"
-            [isSelectedTask]="todo === selectedTodo" 
-            (onSelectedTask)="handleSelectedTask($event)"
-            (onEnter)="handleEnter($event)"></app-todo-item>
-        </div>  
+<div class="ui bottom attached segment pushable">
+  <div class="ui inverted left vertical visible fixed sidebar menu">
+    <a class="item" [class.active]="selectedCategory === category" *ngFor="let category of categories" 
+      (click)="setSelectedCategory(category)">
+      {{category}}
+      <i class="trash icon" (click)="removeCategory(category)"></i>
+    </a>
+    <div class="item">
+      <div class="content">
+        <div class="ui action input">
+            <input type="text" [(ngModel)] ="categoryName" placeholder="Add category...">
+            <button class="ui primary icon button" (click)="addCategory()">
+              <i class="plus icon"></i>
+            </button>
+        </div>
+       </div>
+    </div>   
+  </div>  
+  <div class="pusher">
+    <div class="ui basic segment">
+      <div class="ui info message" *ngIf="!selectedCategory">
+          <div class="header">
+            Please add a category on left to add tasks
+          </div>
+      </div>    
+      <div class="ui padded one column grid" *ngIf="selectedCategory">
+        <div class="column">
+          <button type="button" class="ui primary button" (click)="add()">Add</button>
+        </div>
+        <div class="column">
+          <div class="ui celled list">
+            <div class="item" *ngFor="let todo of todosByCategory[selectedCategory]">
+              <app-todo-item [todo]="todo" [isSelectedTask]="todo === selectedTodo" (onSelectedTask)="handleSelectedTask($event)"
+                (onEnter)="handleEnter($event)"></app-todo-item>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <pomodoro-app [task]="selectedTodo"></pomodoro-app>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="column">
-      <pomodoro-app [task]="selectedTodo"></pomodoro-app> 
   </div>
 </div>
