--- a/src/app/pomodoro/pomodoro.component.html
+++ b/src/app/pomodoro/pomodoro.component.html
@@ -1,7 +1,7 @@
 <div class="ui card bottom-right">
     <div class="content">
         <div class="header">
-            {{toDoubleDigit(minutes)}} : {{toDoubleDigit(seconds)}}
+            {{pomodoroTimerService.time | async}} <span *ngIf="isBreak">(Break)</span>
         </div>
         <div class="description">
           Task: {{task?.text}}
@@ -10,12 +10,18 @@
         {{total}} Pomodoros
      </div>
     <div class="extra content">    
-  <div class="ui primary icon buttons">
-      <button class="ui button" [disabled]="started" (click)="startWork()">
-        <i class="play circle outline icon"></i>
-      </button>
-      <button class="ui button" [disabled]="!started" (click)="stopTimer()">
-        <i class="stop circle outline icon"></i>
-      </button>
-  </div>
+      <div class="ui primary icon buttons">
+          <button class="ui button" [disabled]="started" (click)="startWork()">
+            <i class="play circle outline icon"></i>
+          </button>
+          <button class="ui button" [disabled]="!started" (click)="stopTimer()">
+            <i class="stop circle outline icon"></i>
+          </button>
+          <button class="ui button" (click)="reset()">
+            <i class="redo icon"></i>
+          </button>
+      </div>
+      <div class="right floated icon button" (click)="startShortBreak()">
+        <button class="ui button" [class.green]="isBreak">Take Break</button>
+      </div>
 </div>
